terraform_aws/terraform_asg/securitygroup.tf
resource "aws_default_security_group" "vpc_default_security_group" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "vpc_default_security_group"
  }
}

resource "aws_security_group" "allow_ssh_http_tls" {
  name        = "allow_ssh_http_tls"
  description = "Allow TLS inbound traffic"
  vpc_id = aws_vpc.vpc.id

  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = var.allowIp
  }

  ingress {
    description = "http from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.allowIp
  }

  ingress {
    description = "ssh from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.allowIp
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ssh_http_tls"
  }
}

resource "aws_security_group" "allow_traffic_from_elb" {
  name        = "allow_traffic_from_elb"
  description = "Allow TLS inbound traffic"
  vpc_id = aws_vpc.vpc.id

  ingress {
    description = "TLS from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups = [ aws_security_group.allow_ssh_http_tls.id ]
    # cidr_blocks = [ aws_subnet.public_subnet_1.cidr_block ]
  }

  ingress {
    description = "http from elb"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = [ aws_security_group.allow_ssh_http_tls.id ]
    # cidr_blocks = [ aws_subnet.public_subnet_1.cidr_block ]
  }

  ingress {
    description = "ssh from elb"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    security_groups = [ aws_security_group.allow_ssh_http_tls.id ]
    # cidr_blocks = [ aws_subnet.public_subnet_1.cidr_block ]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_traffic_from_elb"
  }
}
